# wechat-article-exporter

./: .gitignore  CLAUDE.md  CODING_AGENT_IMPLEMENTATION_PLAN.md  LICENSE  README.md  build_exe.py  proxy_addon.py  pyproject.toml  req.md  用户操作手册.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.trae/documents/: 当前项目结构分析.md
docs/: radiant-rolling-orbit.md  用户使用手册.md
docs/exec-plans/: coding-agent-implementation-plan.md
docs/superpowers/specs/: 2026-05-16-wechat-workflow-design.md
tests/: test_cli.py  test_dedup.py
wechat_fetcher/: __init__.py  __main__.py  auto_refresh.py  cli.py  config.py  dedup.py  downloader.py  fetcher.py  proxy_addon.py  scheduler.py  storage.py  ui_automation.py  workflow.py
