[project]
name = "wechat-fetcher"
version = "0.2.0"
description = "微信公众号文章URL抓取工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "HeartFlying"},
]
keywords = ["wechat", "article", "fetcher", "markdown", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "mitmproxy>=9.0.0,<10.0.0",
    "requests>=2.28.0",
    "click>=8.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "uiautomation>=2.0.0",
    "psutil>=5.9.0",
    "pywinauto>=0.6.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
wechat-fetcher = "wechat_fetcher.cli:main"

[project.urls]
Homepage = "https://github.com/HeartFlying/wechat-article-exporter"
Repository = "https://github.com/HeartFlying/wechat-article-exporter"
Documentation = "https://github.com/HeartFlying/wechat-article-exporter/blob/main/README.md"
Issues = "https://github.com/HeartFlying/wechat-article-exporter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wechat_fetcher"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
